cluster/manifests/loganomaly/overlays/dev/loganomaly-adapter/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: loganomaly-adapter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: loganomaly-adapter
  mtls:
    mode: STRICT
