cluster/manifests/loganomaly/overlays/dev/loganomaly-adapter/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: loganomaly-adapter
  labels:
    networking.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
        autoscaling.knative.dev/metric: concurrency
        autoscaling.knative.dev/target: "10"
        autoscaling.knative.dev/minScale: "0"
        autoscaling.knative.dev/maxScale: "10"
        sidecar.istio.io/proxyCPULimit: 1000m
        sidecar.istio.io/proxyMemoryLimit: 1Gi
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 64Mi
      labels:
        app.kubernetes.io/name: loganomaly-adapter
        sidecar.istio.io/inject: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containerConcurrency: 0
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: handler
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: ghcr.io/hippocampus-dev/hippocampus/loganomaly
          imagePullPolicy: IfNotPresent
          args:
            - adapter
            - --grafana-base=https://grafana.kaidotio.dev
            - --repository=hippocampus-dev/hippocampus
          env:
            - name: GOMAXPROCS
              valueFrom:
                resourceFieldRef:
                  resource: limits.cpu
            - name: GOMEMLIMIT
              valueFrom:
                resourceFieldRef:
                  resource: limits.memory
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 128Mi
