cluster/manifests/loganomaly/overlays/dev/loganomaly-adapter/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loganomaly-adapter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loganomaly-adapter
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
